--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -7,17 +7,50 @@
 	<title>Responsive Layout</title>
 </head>
 <body>
-	<h1>Responsive Layout</h1>
-
+	<h1 id="menu-title">Our Menu</h1>
+	<h1 id="cat-title">Categories</h1>
 	<div class="row">
-		<div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-	    <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-	    <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-	    <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-	    <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-	    <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-	    <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-	    <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
+		<div class="col-desktop-4 col-tablet-6 col-mobile-12">
+			<section id="section-chicken">
+				<h2 class="main-section-title">Chicken</h2>
+				<h2 class="mobile-section-title">Most Delicious Chicken You Have Ever Tasted In Your Life</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</section>
+		</div>
+		<div class="col-desktop-4 col-tablet-6 col-mobile-12">
+			<section id="section-beef">
+				<h2 class="main-section-title">Beef</h2>
+				<h2 class="mobile-section-title">Most Delicious Beef You Have Ever Tasted In Your Life</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</section>		
+		</div>
+		<div class="col-desktop-4 col-tablet-12 col-mobile-12" >
+			<section id="section-sushi">
+				<h2 class="main-section-title">Sushi</h2>
+				<h2 class="mobile-section-title">Most Delicious Sushi You Have Ever Tasted In Your Life</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</section>
+		</div>
 	</div>
 </body>
 </html>
