--- a/assignment8/index.html
+++ b/assignment8/index.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Narrow Down Your Menu Choice</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+     <title>Narrow Down Your Menu Choice</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="stylesheet" href="styles/bootstrap.min.css">
+     <link rel="stylesheet" href="styles/styles.css">
+     <script src="angular.min.js"></script>
+        <script src="app.js"></script>    
   </head>
-<body>
-   <div class="container">
-    <h1>Narrow Down Your Chinese Menu Choice</h1>
+  <body ng-app="NarrowItDownApp" ng-controller='NarrowItDownController as narrowCtrl'>
+      <div class="container">
+        <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-    <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
-    </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
-    </div>
-
-    <found-items found-items="...." on-remove="...."></found-items>
-  </div>
-
-</body>
+        <div class="form-group">
+          <input type="text" placeholder="search term" class="form-control" ng-model="narrowCtrl.searchTerm">
+        </div>
+        <div class="form-group narrow-button">
+          <button class="btn btn-primary" ng-click="narrowCtrl.searchMenu()">Narrow It Down For Me!</button>
+        </div>
+      </div>
+      <div style="margin: 40px;">
+        <found-items items="narrowCtrl.found" on-remove="narrowCtrl.remove(index)"></found-items>
+      </div>      
+  </body>
 </html>
